[package]
name = "metalabs_rust_sdk"
version = "0.1.0"
authors = ["Imag <44352064+Imag@users.noreply.github.com>"]
repository = "https://github.com/backbone-dev/metalabs_rust_sdk"
description = "metalabs_rust_sdk"
license = "MIT"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }